# zero2prod

./: Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: build.yml
assets/views/: home.html  login.html
assets/views/admin/: dashboard.html  newsletter.html  password.html
configuration/: base.yaml
migrations/: 20241102065508_add_status_to_subscriptions.sql  20241102065900_make_status_not_null_in_subscriptions.sql  20241106084255_rename_password_column.sql  20241106095320_add_salt_to_users.sql  20241107002001_remove_salt_from_users.sql  20241110054847_seed_user.sql  20241111131639_create_idempotency_table.sql  20241113005014_relax_null_checks_on_idempotency.sql  20241113045100_create_newsletter_issues_table.sql  20241113045828_create_issue_delivery_queue_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  errors.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  view_engine.rs
src/controller/: format.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/controller/admin/: dashboard.rs  logout.rs
src/controller/admin/newsletter/: get.rs  post.rs
src/controller/admin/password/: get.rs  post.rs
src/controller/home/: mod.rs
src/controller/login/: mod.rs  post.rs
src/domain/: change_password.rs  login.rs  mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/middleware/: auth.rs  mod.rs  request_id.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs
