[package]
name = "zero2prod"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.1"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "migrate",
    "uuid",
] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.18.1"

[dev-dependencies]
claim = "0.5.0"
fake = "3.0.0"
mime = "0.3.17"
once_cell = "1.20.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
