[package]
name = "zero2prod"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.7", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
backtrace_printer = "1.3.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
config = "0.14.1"
rand = { version = "0.8.5", features = ["std_rng"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.132"
serde_variant = "0.1.3"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "migrate",
    "uuid",
] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "trace",
    "add-extension",
    "set-header",
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.18.1"

[dev-dependencies]
claims = "0.7.1"
fake = "3.0.0"
linkify = "0.10.0"
mime = "0.3.17"
once_cell = "1.20.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.2"
